# circuit-sat-minisat

./: CMakeLists.txt  README  README.md
benchmark/clique/: description
benchmark/clique/SAT/: brock200_1_sat.bench  brock200_3_sat.bench  keller5_sat.bench  p_hat300-1_sat.bench  sanr200_0.7_sat.bench
benchmark/clique/UNSAT/: brock200_4.bench  brock400_1.bench  c-fat500-10.bench  hamming8-4.bench  p_hat300-1.bench  p_hat300-2.bench  san400_0.7_1.bench
benchmark/ecp/: description
benchmark/ecp/UNSAT/: 88_4.bench  96_4.bench  paley_19.bench  reg_11_10.bench  reg_21_6.bench  simple_reg_120_6.bench  simple_reg_16_8.bench
benchmark/factorization/: description
benchmark/factorization/SAT/: fact_160477719503623.bench  fact_199307321320069.bench  fact_2250304993.bench  fact_2476024410936437.bench  fact_3338793636362231.bench  fact_366889419994001.bench  fact_4542889937394463.bench  fact_58767398799349.bench  fact_6482171639311699.bench  fact_7763883969173419.bench  fact_8169358533040891.bench  fact_940428133246081.bench
benchmark/factorization/UNSAT/: fact_18454837.bench  fact_28635049.bench  fact_39037021.bench  fact_47828987.bench  fact_58503407.bench  fact_63881723.bench  fact_74714191.bench  fact_85635037.bench  fact_89290951.bench  fact_98470003.bench
benchmark/miter/: description.txt
benchmark/miter/SAT/: miter_11.bench  miter_12.bench  miter_164.bench  miter_166.bench  miter_168.bench  miter_21.bench  miter_27.bench  miter_50.bench
benchmark/miter/UNSAT/: BvP_6_4-aigmiter.bench  BvS_7_4-aigmiter.bench  PvS_6_4-aigmiter.bench  xor_5000.bench  xor_6000.bench  xor_7000.bench  xor_7500.bench  xor_9500.bench
benchmark/php/: description
benchmark/php/UNSAT/: 10_31_3.bench  11_12_1.bench  13_14_1.bench  14_15_1.bench  15_16_1.bench  18_55_3.bench  6_19_3.bench  7_22_3.bench  8_17_2.bench  9_19_2.bench
minisat/core/: Config.h  Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
solver/core/: Config.h  Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
solver/mtl/: Alg.h  Alloc.h  Heap.h  IntMap.h  Map.h  Queue.h  Rnd.h  Sort.h  Vec.h
solver/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
